fix main class