@@ -39,7 +39,11 @@
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.8</version>
             <configuration>
-                <mainClass>your.package.MainApp</mainClass>
+                <mainClass>com.alex.meca500.Launcher</mainClass>
+                <options>
+                    <option>--enable-native-access=ALL-UNNAMED</option>
+                    <option>--sun-misc-unsafe-memory-access=allow</option>
+                </options>
             </configuration>
         </plugin>
     </plugins>
